made few changes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="collapse navbar-collapse"
                 id="navcol-1">
                 <ul class="nav navbar-nav ml-auto">
-                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#scorpion">About</a></li>
+                    <li class="nav-item" role="presentation"><a class="nav-link active" href="#about">About</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#hut-lab">HuT Lab</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#projects">Projects</a></li>
                     <li class="nav-item" role="presentation"><a class="nav-link" href="#display">Gallery</a></li>
@@ -47,8 +47,8 @@
 
         <section class="clean-block clean-hero" id="top" style="background-image:url(&quot;assets/img/main/image4.jpg&quot;);color:rgba(0,0,0,0.85);">
             <div class="text">
-                <h2>Lorem ipsum dolor sit amet.</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in, mattis vitae leo.</p>
+                <h2>Hi, I'm Paripreksya<span class="blinking-cursor">|</span></h2>
+                <p>I'm ready to rescue, 24x7.</p>
                 <h2></h2>
                 <div class="scroll-downs">
                   <div class="mousey">
@@ -58,7 +58,7 @@
             </div>
         </section>
 
-        <section class="clean-block clean-info dark" id="scorpion" style="background-color:rgb(255,255,255);">
+        <section class="clean-block clean-info dark" id="about" style="background-color:rgb(255,255,255);">
             <div class="container">
                 <div class="block-heading">
                     <h2 class="text-info"></h2>
@@ -68,7 +68,7 @@
                 <div class="row align-items-center">
                     <div class="col-md-6 wow fadeIn"><center><img class="img-thumbnail" src="assets/img/main/scorpion.jpg"></center></div>
                     <div class="col-md-6 wow fadeInRight">
-                        <!-- <h3>Lorem impsum dolor sit amet</h3>  -->
+                        <!-- <h3>Lorem impsum dolor sit amet</h3> -->
                         <div class="getting-started-info">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                         </div>
@@ -86,7 +86,7 @@
                 </div>
                 <div class="row align-items-center">
                     <div class="col-md-6">
-                        <!--  <h3>Lorem impsum dolor sit amet</h3>    -->
+                         <!-- <h3>Lorem impsum dolor sit amet</h3> -->
                         <div class="getting-started-info wow fadeInLeft">
                             <p>&nbsp;&#09;&nbsp;&#09;&nbsp;&#09;&nbsp;&#09;&nbsp;&#09;&nbsp;&#09;The dedicated Research lab, HuT Labs - ( Humanitarian Technology Labs) mainly focusing on Health Care, Robotics, Human Aided Devices, and Embedded Sensor Networks is headed by Prof. Rajesh Kannan Megalingam, of the department, was established in 2012. Within a year of establishment, HuT Labs carried out significant research works with more than 10 research paper publications and quite national and international recognitions. Hut Labs also acknowledges the contribution of IEEE Foundation and IEEE SEC both in NJ, USA for their support to our research work.</p>
                         </div>
@@ -169,7 +169,7 @@
         <div class="container">
             <div class="intro">
               <h2 class="text-center">Mentors</h2>
-              <!-- <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>  -->
+              <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
             </div>
             <div class="row people">
                 <div class="col-md-6 col-lg-6 item"><img class="rounded-circle" src="assets/img/avatars/chief1.jpg">
@@ -196,7 +196,7 @@
         <div class="container">
             <div class="intro">
                 <h2 class="text-center">Team </h2>
-                <!-- <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>  -->
+                <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
             </div>
             <div class="row people">
                 <div class="col-md-6 col-lg-4 item"><img class="rounded-circle" src="assets/img/avatars/1.JPG">
